@@ -1,3 +1,4 @@
+- Fixed swapped resize mouse cursors with Qt-3.1.2
 - Fixed table column resizing (avoid overlapping columns)
 
 Changes after KWord 1.3 rc (1.2.94)
